[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[project]
name = "skeem"
description = "Infer SQL DDL statements from tabular data"
readme = "README.rst"
keywords = [
  "csv",
  "ddl",
  "infer",
  "inference",
  "introspection",
  "json",
  "jsonl",
  "ldjson",
  "ndjson",
  "rdbms",
  "reflection",
  "schema",
  "schema-conversion",
  "sql",
  "sql-schema",
  "tabular-data",
]
license = { text = "MIT" }
authors = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
  { name = "Benjamin Gutzmann", email = "gutzemann@gmail.com" },
  { name = "Richard Pobering", email = "richard.pobering@panodata.org" },
]
requires-python = ">=3.8"
dependencies = [
  "click<9",
  "colorama<1",
  "crash",
  "crate[sqlalchemy]",
  "ddlgenerator<0.2",
  "frictionless[excel,json,ods,parquet,sql]<5.6",
  "fsspec[gcs,github,http,s3]==2023.1",
  "json_stream<3",
  "line-protocol-parser<2",
  "odfpy<2",
  "pandas<1.6",
  "requests<3",
  "sql-formatter<0.7",
  "sqlmakeuper<0.2",
]
dynamic = [
  "version",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Interpreters",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
[project.optional-dependencies]
develop = [
  "black<23",
  "hunter<4",
  "mypy==0.991",
  "poethepoet<0.19",
  "pyproject-fmt<0.6",
  "ruff==0.0.231",
  "validate-pyproject<0.12",
]
release = [
  "build<1",
  'minibump<1; python_version >= "3.10"',
  "twine<5",
]
scientific = [
  "cfgrib<1",
  "cftime<2",
  "scipy<2",
  "xarray<2024",
]
test = [
  "pytest<8",
  "pytest-cov<5",
  "pytest-timeout<3",
]

[project.urls]
changelog = "https://github.com/daq-tools/skeem/blob/main/CHANGES.rst"
documentation = "https://github.com/daq-tools/skeem"
homepage = "https://github.com/daq-tools/skeem"
repository = "https://github.com/daq-tools/skeem"

[project.scripts]
skeem = "skeem.cli:cli"


[tool.black]
line-length = 120

[tool.coverage.run]
branch = false
omit = [
  "skeem/ddlgen/ddlgenerator.py",
  "skeem/ddlgen/sources.py",
  "skeem/fastparquet/core.py",
  "skeem/pandas/io_common.py",
  "tests/*",
]
source = ["skeem"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.mypy]
packages = ["skeem"]
install_types = true
ignore_missing_imports = true
implicit_optional = true
non_interactive = true

[tool.pytest.ini_options]
addopts = "-ra -q --verbosity=3 --doctest-modules --cov --cov-report=term-missing --cov-report=xml"
minversion = "2.0"
log_level = "DEBUG"
log_cli_level = "DEBUG"
testpaths = [
  "skeem",
  "tests",
]
xfail_strict = true
markers = [
  "roadrunner",
  "slow",
]


[tool.ruff]
line-length = 120

select = [
  # Bandit
  "S",
  # Bugbear
  "B",
  # Builtins
  "A",
  # comprehensions
  "C4",
  # eradicate
  "ERA",
  # flake8-2020
  "YTT",
  # isort
  "I",
  # pandas-vet
  "PD",
  # print
  "T20",
  # Pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # return
  "RET",
]

extend-ignore = [
  # zip() without an explicit strict= parameter
  "B905",
  # df is a bad variable name. Be kinder to your future self.
  "PD901",
  # Unnecessary variable assignment before `return` statement
  "RET504",
  # Unnecessary `elif` after `return` statement
  "RET505",
]

[tool.ruff.per-file-ignores]
"skeem/core.py" = ["E402"]
"skeem/fastparquet/*" = ["E722"]
"skeem/pandas/*" = ["S101"]
"skeem/report.py" = ["T201"]
"skeem/util/platform.py" = ["T201"]
"skeem/util/report.py" = ["T201"]
"tests/*" = ["S101"]  # Use of `assert` detected
"tests/*roadrunner*" = ["ERA001"]  # Use of `assert` detected

[tool.setuptools.packages.find]
namespaces = false


# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]

check = [
  "lint",
  "test",
]

format = [
  { cmd = "black ." },
  # Configure Ruff not to auto-fix (remove!) unused variables (F841) and `print` statements (T201).
  { cmd = "ruff --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 ." },
  { cmd = "pyproject-fmt pyproject.toml" },
]

lint = [
  { cmd = "ruff ." },
  { cmd = "black --check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]

release = [
  { cmd = "minibump bump --relax minor" },
  { cmd = "python -m build" },
  { cmd = "twine upload dist/*" },
]

test = { cmd = "pytest -m 'not roadrunner'" }
test-roadrunner = { cmd = "pytest -m 'roadrunner'" }
